<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item name="android:windowBackground">@drawable/bg_qp</item>-->

    <CheckBoxPreference
        android:title="@string/pref_notifications_label"
        android:key ="@string/pref_notifications_key"
        android:summaryOff="@string/pref_notifications_off"
        android:summaryOn="@string/pref_notifications_on"
        android:defaultValue="@string/pref_notifications_default"/>

    <ListPreference
        android:title="@string/pref_storage_label"
        android:key ="@string/pref_storage_key"
        android:defaultValue="@string/pref_storage_internal"
        android:entries="@array/pref_storage_options"
        android:entryValues="@array/pref_storage_values"/>

</PreferenceScreen>