<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="45dp"
    tools:context="app.racdeveloper.com.ICoNS.LoginActivity"
    android:background="@drawable/bg1">

    <!-- Login progress -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/logo_small"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_marginTop="258dp"
        android:layout_marginLeft="98dp"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/loginContainer"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="270dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="number|numberPassword|phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#000000" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="320dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:layout_gravity="center"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#000000"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceMedium"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="#f2a94c"
                android:textColor="#2b2a2a" />

        </LinearLayout>
        <TextView
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=" SIGN UP"
            android:textStyle="bold"
            android:id="@+id/tvSignUpForm"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="#14053d"
            android:textColor="#ffffff" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
